[package]
name = "svg2png-wasm-rs"
version = "0.1.0"
authors = ["Don Hicks <don.hicks.dev@gmail.com>"]
description = "A Rust-based WebAssembly library that converts SVG to PNG."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
# Add other dependencies as needed

[lib]
crate-type = ["cdylib", "rlib"]